--- a/miniprogram/packageAPI/pages/ar/3dmarker-ar/3dmarker-ar.wxml
+++ b/miniprogram/packageAPI/pages/ar/3dmarker-ar/3dmarker-ar.wxml
@@ -6,6 +6,7 @@
     <button type="primary"  bindtap="addMarker" style="height:10vh">添加 marker</button>
     <button type="primary" disabled="{{!markerId}}" bindtap="removeMarker" style="height:10vh">删除 marker</button>
     <button type="primary" disabled="{{!markerId}}" bindtap="getAllMarker" style="height:10vh">获取所有 marker</button>
+    <button type="primary" disabled="{{!mapUrl}}" bindtap="saveMap" style="height:10vh">保存map文件</button>
   </view>
   <view class="photo-cnt">
     <view class="page-body-text tc">提示：点击加号添加模型视频, 选择已完成的模型, 选中将呈现蓝框, 手机摄像头对准该模型后添加marker, 页面下拉刷新模型状态, 向右滑动查看模型列表</view>
