--- a/miniprogram/packageAPI/pages/ar/2dmarker-ar/2dmarker-ar.wxml
+++ b/miniprogram/packageAPI/pages/ar/2dmarker-ar/2dmarker-ar.wxml
@@ -1,22 +1,38 @@
 
-<view class="container page" data-weui-theme="{{theme}}">
-  <canvas type="webgl" id="webgl" style="width: {{width}}px; height: {{height}}px">
-  </canvas>
+<view class="page wrap-fix" data-weui-theme="{{theme}}">
+  <canvas type="webgl" id="webgl" style="width: {{width}}px; height: {{height}}px"></canvas>
 
-  <view class="btn-cnt">
-      <button type="primary" disabled="{{!imgUrl}}" bindtap="addMarker">添加 marker</button>
-      <button type="primary" disabled="{{!imgUrl}}" bindtap="removeMarker">删除 marker</button>
-      <button type="primary" disabled="{{!imgUrl}}" bindtap="getAllMarker">获取所有 marker</button>
+  <view class="hint-words">提示：选择用于识别的图片, 点击添加为marker, 然后手机摄像头对准下方所选图片</view>
+
+  <view class="wrap-option">
+    <button type="primary" disabled="{{markerImgList.length === 0}}" bindtap="removeMarker">删除已有 marker</button>
+    <button type="primary" disabled="{{markerImgList.length === 0}}" bindtap="getAllMarker">获取所有 marker</button>
   </view>
-  <view class="photo-cnt"> 
-  <view class="page-body-text tc">提示：选择图片作为marker, 点击添加marker, 然后手机摄像头对准下方所选图片</view>
-  <view>
-  <image wx:if="{{imgUrl}}" src="{{imgUrl}}" style="width: 50vw; height: 20vh; margin-left:25%" mode="aspectFit" />
-  <image wx:else="{{imgUrl}}" src="./choose.png" style="width: 50vw; height: 20vh; margin-left:25%" mode="aspectFit" />
+  <view class="wrap-marker">
+    <view class="wrap-left">
+      <button type="primary" class="btn-left" disabled="{{chooseImgList.length === 0}}" bindtap="addMarker">添加 marker</button>
+    </view>
+    <view class="wrap-right img-list">
+      <view class="img-list">
+        <image wx:for="{{markerImgList}}"  wx:for-item="markerImg" wx:key="markerIndex" src="{{markerImg.filePath}}" mode="aspectFit" />
+      </view>
+      <view class="hint-empty" wx:if="{{markerImgList.length === 0}}">
+        <p>上传图片后点击左侧按钮<br/>将图片添加到 Marker 识别列表</p>
+      </view>
+    </view>
   </view>
-  </view>
-  <view class="btn-cnt">
-      <button type="primary" class="btn-choose" bindtap="chooseMedia">选择图片</button>
+  <view class="wrap-choose">
+    <view class="wrap-left">
+      <button type="primary" class="btn-left" bindtap="chooseMedia">选择识别图片</button>
+    </view>
+    <view class="wrap-right">
+      <view class="img-list">
+        <image wx:for="{{chooseImgList}}"  wx:for-item="chooseImg" wx:key="chooseIndex" src="{{chooseImg}}" mode="aspectFit" />
+      </view>
+      <view class="hint-empty" wx:if="{{chooseImgList.length === 0}}">
+        <p>点击左侧按钮上传图片（允许上传1-9张）</p>
+      </view>
+    </view>
   </view>
 </view>
 
