--- a/miniprogram/packageAPI/pages/ar/2dmarker-ar/2dmarker-ar.wxss
+++ b/miniprogram/packageAPI/pages/ar/2dmarker-ar/2dmarker-ar.wxss
@@ -1,15 +1,108 @@
-.btn-cnt {
-    display: flex;
-}
-
-.photo-cnt {
+.wrap-fix {
   position: absolute;
-  margin-top: 60vh;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.btn-choose {
-  flex:0 50%;
+.hint-words {
+  position: absolute;
+  left: 20rpx;
+  top: 20rpx;
+  right: 20rpx;
+  padding: 10rpx 20rpx;
+  line-height: 40rpx;
+  text-align: center;
+  border-radius: 6rpx;
+  background-color: rgba(0, 0, 0, .3);
+  font-size: 26rpx;
+  color: #fff;
+}
+
+.wrap-left {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 30rpx;
+  width: 160rpx;
+}
+
+button.btn-left {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 12rpx;
+  font-size: 30rpx;
+  line-height: 1.2;
+}
+
+.wrap-right {
+  position: absolute;
+  left: 180rpx;
+  right: 20rpx;
+  top: 0;
+  bottom: 30rpx;
   display: flex;
-  height: 5vh;
-  margin-bottom: 5vh;
+}
+
+.img-list {
+  display: flex;
+  overflow: auto;
+}
+
+.img-list image {
+  height: 100%;
+}
+
+.hint-empty {
+  position: relative;
+  flex: 1;
+  border: 4rpx dotted rgba(0, 0, 0, .3);
+  border-radius: 6rpx;
+}
+
+.hint-empty p {
+  position: absolute;
+  left: 20rpx;
+  right: 20rpx;
+  top: 50%;
+  transform: translate(0, -50%);
+  text-align: center;
+  font-size: 26rpx;
+  color: rgba(0, 0, 0, .3);
+}
+
+.wrap-choose {
+  position: absolute;
+  left: 20rpx;
+  right: 20rpx;
+  bottom: 0;
+  height: 15%;
+}
+
+.wrap-marker {
+  position: absolute;
+  left: 20rpx;
+  right: 20rpx;
+  bottom: 15%;
+  height: 15%;
+}
+
+.wrap-option {
+  position: absolute;
+  left: 20rpx;
+  right: 0;
+  bottom: 30%;
+  height: 10%;
+  display: flex;
+}
+
+.wrap-option button {
+  flex: 1;
+  margin: 20rpx 20rpx 20rpx 0;
+  font-size: 30rpx;
+  line-height: 1.2;
 }
