(feat)修改AR基础behavior，以及2d marker

--- a/miniprogram/packageAPI/pages/ar/2dmarker-ar/2dmarker-ar.wxml
+++ b/miniprogram/packageAPI/pages/ar/2dmarker-ar/2dmarker-ar.wxml
@@ -1,6 +1,14 @@
 
 <view class="page wrap-fix" data-weui-theme="{{theme}}">
-  <canvas type="webgl" id="webgl" style="width: {{width}}px; height: {{height}}px"></canvas>
+  <view class="canvas-wrap" style="width: {{widthScale * 100}}%; height: {{heightScale * 100}}%">
+    <canvas type="webgl" id="webgl"></canvas>
+    
+    <view class="hint-box"  wx:for="{{hintBoxList}}"  wx:for-item="hintBox" wx:key="hintBoxId"
+      style="left: {{hintBox.left}}%; top: {{hintBox.top}}%; width: {{hintBox.width}}px;  height: {{hintBox.height}}px;"
+    >
+      <p class="hint-id">识别id: {{hintBox.markerId}}</p>
+    </view>
+  </view>
 
   <view class="hint-words">提示：选择用于识别的图片, 点击添加为marker, 然后手机摄像头对准下方所选图片</view>
 
