--- a/miniprogram/packageAPI/pages/ar/2dmarker-ar/2dmarker-ar.wxss
+++ b/miniprogram/packageAPI/pages/ar/2dmarker-ar/2dmarker-ar.wxss
@@ -1,3 +1,41 @@
+.canvas-wrap {
+  position: relative;
+  width: 100%;
+  background-color: #000;
+}
+
+.canvas-wrap canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.hint-box {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width: 0;
+  height: 0;
+  border: 6rpx solid #07c160;
+  border-radius: 8rpx;
+}
+.hint-id {
+  position: absolute;
+  left: -6rpx;
+  right: -6rpx;
+  bottom: 100%;
+  color: #fff;
+  font-size: 20rpx;
+  line-height: 40rpx;
+  text-align: center;
+  text-overflow: ellipsis;
+  background-color: #07c160;
+  border-radius: 8rpx 8rpx 0 0;
+
+}
+
 .wrap-fix {
   position: absolute;
   left: 0;
