--- a/miniprogram/packageAPI/pages/ar/3dmarker-ar/3dmarker-ar.wxss
+++ b/miniprogram/packageAPI/pages/ar/3dmarker-ar/3dmarker-ar.wxss
@@ -1,18 +1,75 @@
-.btn-cnt {
+.canvas-wrap {
+  position: relative;
+  width: 100%;
+  background-color: #000;
+}
+
+.canvas-wrap canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.hint-box {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width: 0;
+  height: 0;
+}
+.hint-id {
+  position: absolute;
+  left: -6rpx;
+  right: -6rpx;
+  bottom: 100%;
+  color: #fff;
+  font-size: 20rpx;
+  line-height: 40rpx;
+  text-align: center;
+  text-overflow: ellipsis;
+  background-color: #07c160;
+  border-radius: 8rpx;
+}
+
+
+.wrap-fix {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.hint-words {
+  position: absolute;
+  left: 20rpx;
+  top: 20rpx;
+  right: 20rpx;
+  padding: 10rpx 20rpx;
+  line-height: 40rpx;
+  text-align: center;
+  border-radius: 6rpx;
+  background-color: rgba(0, 0, 0, .3);
+  font-size: 26rpx;
+  color: #fff;
+}
+
+.wrap-option {
+  margin-left: 20rpx;
+  height: 200rpx;
   display: flex;
 }
 
-.photo-cnt {
-  margin-top: 50vh;
+.wrap-option button {
+  flex: 1;
+  margin: 20rpx 20rpx 20rpx 0;
+  padding: 4rpx;
+  font-size: 28rpx;
+  line-height: 1.2;
 }
 
-.btn-choose {
-  flex: 0 50%;
-  display: flex;
-  height: 5vh;
-  margin-bottom: 5vh;
-}
-
-.scroll-view_H {
-  white-space: nowrap;
+.model-wrap {
+  position: relative;
 }
