--- a/miniprogram/packageAPI/pages/ar/shoe-detect/shoe-detect.wxss
+++ b/miniprogram/packageAPI/pages/ar/shoe-detect/shoe-detect.wxss
@@ -11,3 +11,11 @@
     width: 100%;
     height: 100%;
 }
+
+.canvas-wrap #canvas {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
