--- a/miniprogram/packageAPI/pages/ar/2dmarker-ar/2dmarker-ar.wxml
+++ b/miniprogram/packageAPI/pages/ar/2dmarker-ar/2dmarker-ar.wxml
@@ -1,7 +1,7 @@
 
 <view class="page wrap-fix" data-weui-theme="{{theme}}">
   <view class="canvas-wrap" style="width: {{widthScale * 100}}%; height: {{heightScale * 100}}%">
-    <canvas type="webgl" id="webgl"></canvas>
+    <canvas type="webgl" id="canvas"></canvas>
     
     <view class="hint-box"  wx:for="{{hintBoxList}}"  wx:for-item="hintBox" wx:key="hintBoxId"
       style="left: {{hintBox.left}}%; top: {{hintBox.top}}%; width: {{hintBox.width}}px;  height: {{hintBox.height}}px;"
