--- a/miniprogram/packageAPI/pages/ar/shoe-detect/shoe-detect.wxml
+++ b/miniprogram/packageAPI/pages/ar/shoe-detect/shoe-detect.wxml
@@ -1,6 +1,13 @@
 <view class="page" data-weui-theme="{{theme}}">
   <view class="canvas-wrap" style="width: {{widthScale * 100}}%; height: {{heightScale * 100}}%">
-    <canvas type="webgl" id="webgl"></canvas>
+    <xr-frame-canvas
+      disable-scroll
+      id="canvas"
+      width="{{width}}"
+      height="{{height}}"
+      style="width:{{domWidth}}px;height:{{domHeight}}px;"
+      bind:sceneReady="handleXRSceneReady"
+    ></xr-frame-canvas>
   </view>
   <view class="bottom-wrap">
     <p class="page-body-text tc">提示：将摄像头对准鞋部, 检测到的鞋部将会被标记出识别框和鞋部标记点</p>
