--- a/miniprogram/packageAPI/pages/ar/3dmarker-ar/Components/arModelComponent.wxml
+++ b/miniprogram/packageAPI/pages/ar/3dmarker-ar/Components/arModelComponent.wxml
@@ -20,6 +20,7 @@
       >
         <text class="status">{{modelItem.statusMsg}}</text>
         <text class="timeStamp">{{modelItem.uploadTime}}</text>
+        <view class="cosid">{{modelItem.cosid != undefined ? modelItem.cosid : '不存在cosid'}}</view>
         <text wx:if="{{modelItem.restTime !== 0}}" class="restTime">剩余 {{modelItem.restTime}} 天过期</text>
         <text class="errMsg" wx:if="{{modelItem.errMsg !== undefined}}">{{modelItem.errMsg}}</text>
       </view>
