--- a/miniprogram/packageAPI/pages/ar/shoe-detect/shoe-detect.wxss
+++ b/miniprogram/packageAPI/pages/ar/shoe-detect/shoe-detect.wxss
@@ -19,3 +19,14 @@
     width: 100%;
     height: 100%;
 }
+
+.hint-bottom {
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+    padding: 5px 10px;
+    font-size: 14px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.5);
+}
