(vk) 更新plane结合marker+depth案例

--- a/miniprogram/packageAPI/pages/ar/photo-idcard-detect/photo-idcard-detect.wxml
+++ b/miniprogram/packageAPI/pages/ar/photo-idcard-detect/photo-idcard-detect.wxml
@@ -28,6 +28,6 @@
     </view>
 
     <view class="hint-bottom page-body-text tc">
-        <text>提示：点击选择图片，上传本地照片或使用小程序相机拍摄，然后开始身份证检测，将会显示检测到的身份证信息</text>
+        <text>提示：点击选择图片，上传本地照片或使用小程序相机拍摄，然后开始身份证检测，将会显示检测到的身份证信息（需基础库版本3.3.0）</text>
     </view>
 </view>
