--- a/miniprogram/packageAPI/pages/ar/plane-ar-v2-options/plane-ar-v2-options.wxml
+++ b/miniprogram/packageAPI/pages/ar/plane-ar-v2-options/plane-ar-v2-options.wxml
@@ -14,8 +14,8 @@
 
   <view class="wrap-option">
     <view class="row">
-      <button type="primary" disabled="{{markerImgList.length === 0}}" bindtap="placePlane">识别点放置方块</button>
-      <button type="primary" disabled="{{markerImgList.length === 0}}" bindtap="changeDepthFlag">开启关闭深度遮挡</button>
+      <button type="primary" bindtap="placeItem">识别点放置模型</button>
+      <button type="primary" bindtap="changeDepthFlag">开启关闭深度遮挡</button>
     </view>
     <view class="row">
       <button type="primary" disabled="{{markerImgList.length === 0}}" bindtap="removeMarker">删除已有 marker</button>
