--- a/miniprogram/packageAPI/pages/ar/body-detect/body-detect.wxml
+++ b/miniprogram/packageAPI/pages/ar/body-detect/body-detect.wxml
@@ -1,7 +1,7 @@
 <view class="container page" data-weui-theme="{{theme}}">
   <view><canvas type="webgl" id="webgl" style="width: {{width}}px; height: {{height}}px" bindtouchend="onTouchEnd">
     </canvas></view>
-  <view class="page-body-text tc" style="height:20%">提示：将摄像头对准人体, 检测到的人体将会被标记出识别框和人体部位标记点
+  <view class="page-body-text tc" style="height:20%">提示：将摄像头对准人体, 检测到的人体将会被标记出识别框和人体部位标记点（需保证设备没有开启竖屏锁定）
     <view wx:if="{{cameraPosition == 0}}">
         <button type="primary" bindtap="switchCamera" data-value="1" disabled="{{buttonDisable}}">切换为前置摄像头</button>
     </view>
