--- a/miniprogram/packageAPI/pages/ar/hand-detect-3d/hand-detect-3d.wxml
+++ b/miniprogram/packageAPI/pages/ar/hand-detect-3d/hand-detect-3d.wxml
@@ -16,6 +16,9 @@
 
 
   <view class="hint-bottom page-body-text tc">
+    <view class="btn-wrap">
+      <button class="btn" type="primary" bindtap="switchCamera">切换前后置摄像头</button>
+    </view>
     <text>提示：摄像头对准手，然后会显示16个关键点的三维坐标提示小球</text>
   </view>
 </view>
