fix: add workaround for glass-easel cross package import reference lookup

--- a/miniprogram/page/API/components/set-tab-bar/set-tab-bar.wxml
+++ b/miniprogram/page/API/components/set-tab-bar/set-tab-bar.wxml
@@ -1,3 +1,8 @@
+<!-- FIXME: workaround for glass-easel cross package import reference lookup, remove this ASAP -->
+<import src="/common/head.wxml" />
+<import src="/common/foot.wxml" />
+<!-- end of workaround -->
+
 <import src="../../../common/head.wxml" />
 <import src="../../../common/foot.wxml" />
 
