feat(vk)人脸说明更新

--- a/miniprogram/packageAPI/pages/ar/face-detect-3d/face-detect-3d.wxml
+++ b/miniprogram/packageAPI/pages/ar/face-detect-3d/face-detect-3d.wxml
@@ -18,7 +18,7 @@
     <view class="btn-wrap">
       <button class="btn" type="primary" bindtap="switchCamera">切换前后置摄像头</button>
     </view>
-    <text>提示：摄像头对准人脸，然后会显示106个关键点的三维坐标提示小球，以及通用的半透明脸模模型</text>
+    <text>提示：摄像头对准人脸，然后会显示106个关键点的三维坐标提示小球，以及通用的半透明脸模模型（支持多个人脸识别）</text>
   </view>
 </view>
 
