(feat)VK: 提交平面附加能力示例、更新3d marker逻辑

--- a/miniprogram/packageAPI/pages/ar/3dmarker-ar/Components/arModelComponent.wxml
+++ b/miniprogram/packageAPI/pages/ar/3dmarker-ar/Components/arModelComponent.wxml
@@ -14,7 +14,7 @@
   <view class="wrap-right">
     <view class="model-item" wx:for="{{models}}" wx:key="modelIndex" wx:for-item="modelItem">
       <view
-        class="model-info {{modelItem.modelStatus === 0 ? 'loading': ''}} {{modelItem.modelStatus === 1 ? 'done': '' }} {{modelItem.modelStatus === 2 ? 'error': '' }} {{targetCosId != null && modelItem.cosid == targetCosId ? 'choosed' : '' }}"
+        class="model-info {{modelItem.modelStatus === 0 ? 'loading': ''}} {{modelItem.modelStatus === 1 ? 'done': '' }} {{modelItem.modelStatus === 2 || modelItem.modelStatus === 3 ? 'error': '' }} {{targetCosId != null && modelItem.cosid == targetCosId ? 'choosed' : '' }}"
         bindtap="chooseARModel"
         data-cosid="{{modelItem.cosid}}"
       >
