--- a/miniprogram/packageAPI/pages/device/wifi/wifi.wxml
+++ b/miniprogram/packageAPI/pages/device/wifi/wifi.wxml
@@ -1,5 +1,5 @@
-<import src="../../../common/head.wxml" />
-<import src="../../../common/foot.wxml" />
+<import src="../../../../common/head.wxml" />
+<import src="../../../../common/foot.wxml" />
 
 <view class="container page" data-weui-theme="{{theme}}">
   <template is="head" data="{{title: 'Wi-Fi'}}"/>
